testsuite/tests/checks/raise_builtin/test.out
src.adb:5:4: error: Raising_Predefined_Exceptions - rule violation
5 |    raise Program_Error with "Message";
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

